--- a/projects_sub/mathsolver.html
+++ b/projects_sub/mathsolver.html
@@ -97,11 +97,11 @@ margin: 1rem auto 2rem auto; /* Centered divider */
             <a href="index.html" class="text-2xl font-bold text-primary hover:text-secondary transition duration-300">K.S.D</a>
 
             <ul class="hidden md:flex space-x-8 items-center">
-                <li><a href="index.html" class="hover:text-primary transition duration-300 font-medium">Home</a></li>
-                <li><a href="projects.html" class="text-white bg-gradient-to-r from-primary to-secondary py-2 px-5 rounded-full hover:opacity-90 transition duration-300 font-semibold">Projects</a></li>
-                 <li><a href="index.html#about" class="hover:text-primary transition duration-300 font-medium">About</a></li>
-                 <li><a href="index.html#skills" class="hover:text-primary transition duration-300 font-medium">Skills</a></li>
-                 <li><a href="index.html#contact" class="hover:text-primary transition duration-300 font-medium">Contact</a></li>
+                <li><a href="../index.html" class="hover:text-primary transition duration-300 font-medium">Home</a></li>
+                <li><a href="../projects.html" class="text-white bg-gradient-to-r from-primary to-secondary py-2 px-5 rounded-full hover:opacity-90 transition duration-300 font-semibold">Projects</a></li>
+                 <li><a href="../index.html#about" class="hover:text-primary transition duration-300 font-medium">About</a></li>
+                 <li><a href="../index.html#skills" class="hover:text-primary transition duration-300 font-medium">Skills</a></li>
+                 <li><a href="../index.html#contact" class="hover:text-primary transition duration-300 font-medium">Contact</a></li>
             </ul>
 
             <button @click="mobileMenuOpen = !mobileMenuMenuOpen" class="md:hidden focus:outline-none text-lighttext hover:text-primary text-2xl z-50">
@@ -119,11 +119,11 @@ margin: 1rem auto 2rem auto; /* Centered divider */
          x-transition:leave-end="opacity-0 transform -translate-y-full"
          class="fixed inset-0 bg-black/95 z-40 flex flex-col items-center justify-center space-y-6 md:hidden"
          @click.away="mobileMenuOpen = false">
-            <a href="index.html" @click="mobileMenuOpen = false" class="text-2xl hover:text-primary transition duration-300">Home</a>
-            <a href="projects.html" @click="mobileMenuOpen = false" class="text-2xl text-white bg-gradient-to-r from-primary to-secondary py-2 px-5 rounded-full hover:opacity-90 transition duration-300 font-semibold">Projects</a>
-             <a href="index.html#about" @click="mobileMenuOpen = false" class="text-2xl hover:text-primary transition duration-300">About</a>
-             <a href="index.html#skills" @click="mobileMenuOpen = false" class="text-2xl hover:text-primary transition duration-300">Skills</a>
-            <a href="index.html#contact" @click="mobileMenuOpen = false" class="text-2xl hover:text-primary transition duration-300">Contact</a>
+            <a href="../index.html" @click="mobileMenuOpen = false" class="text-2xl hover:text-primary transition duration-300">Home</a>
+            <a href="../projects.html" @click="mobileMenuOpen = false" class="text-2xl text-white bg-gradient-to-r from-primary to-secondary py-2 px-5 rounded-full hover:opacity-90 transition duration-300 font-semibold">Projects</a>
+             <a href="../index.html#about" @click="mobileMenuOpen = false" class="text-2xl hover:text-primary transition duration-300">About</a>
+             <a href="../index.html#skills" @click="mobileMenuOpen = false" class="text-2xl hover:text-primary transition duration-300">Skills</a>
+            <a href="../index.html#contact" @click="mobileMenuOpen = false" class="text-2xl hover:text-primary transition duration-300">Contact</a>
     </div>
 
     <main class="py-20 pt-32 md:pt-40 flex justify-center items-center min-h-screen"> <section id="math-solver-project" class="container mx-auto px-6 max-w-6xl flex justify-center items-center">
