--- a/projects_sub/apps_software/my-finance-app.html
+++ b/projects_sub/apps_software/my-finance-app.html
@@ -18,7 +18,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 
-    <!-- Alpine.js CDN -->
+    <!-- Alpine.js CDN - Added defer attribute back -->
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
 
     <!-- Custom Styles and Tailwind Config -->
@@ -110,15 +110,15 @@
             :class="{ 'bg-black/80 backdrop-blur-md shadow-lg': window.scrollY > 50, 'bg-transparent': window.scrollY <= 50 }"
             @scroll.window="window.scrollY > 50 ? true : false">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center max-w-7xl">
-            <!-- Logo Link - Corrected path -->
+            <!-- Logo Link - User's original path retained -->
             <a href="../../index.html" class="text-2xl font-bold text-primary hover:text-secondary transition duration-300">K.S.D</a>
 
-            <!-- Desktop Navigation -->
+            <!-- Desktop Navigation - User's original paths retained -->
             <ul class="hidden md:flex space-x-8 items-center">
                 <li><a href="../../index.html" class="hover:text-primary transition duration-300 font-medium">Home</a></li>
                 <li><a href="../../index.html#about" class="hover:text-primary transition duration-300 font-medium">About</a></li>
                 <li><a href="../../index.html#skills" class="hover:text-primary transition duration-300 font-medium">Skills</a></li>
-                <!-- Projects link styled as a button - Corrected path -->
+                <!-- Projects link styled as a button - User's original path retained -->
                 <li><a href="../../projects.html" class="text-white bg-gradient-to-r from-primary to-secondary py-2 px-5 rounded-full hover:opacity-90 transition duration-300 font-semibold">Projects</a></li>
                 <li><a href="../../index.html#contact" class="hover:text-primary transition duration-300 font-medium">Contact</a></li>
             </ul>
@@ -130,7 +130,7 @@
         </nav>
     </header>
 
-    <!-- Mobile Menu -->
+    <!-- Mobile Menu - User's original paths retained -->
     <div x-show="mobileMenuOpen"
          x-transition:enter="transition ease-out duration-300"
          x-transition:enter-start="opacity-0 transform -translate-y-full"
@@ -166,8 +166,8 @@
                         <h3 class="text-3xl font-bold text-white mb-2">K.S.D Personal Finance Tracker & Manager</h3>
                         <p class="text-gray-300 text-lg">A powerful and intuitive mobile application designed to simplify your daily financial management.</p>
                         <div class="flex justify-center md:justify-start space-x-4 mt-4">
-                            <!-- Updated download link to a placeholder for GitHub Release -->
-                            <a href="https://github.com/your-username/your-repo/releases/download/v1.0.0/your-app-name.apk" target="_blank" class="inline-block bg-green-600 hover:bg-green-700 text-white font-semibold py-2 px-5 rounded-full shadow-md transition duration-300">
+                            <!-- Updated download link with the provided APK URL -->
+                            <a href="https://github.com/kaali-k/kalanasahan-portfolio/releases/download/untagged-d81b2e16920ae6f41ffb/Finance.App.apk" target="_blank" class="inline-block bg-green-600 hover:bg-green-700 text-white font-semibold py-2 px-5 rounded-full shadow-md transition duration-300">
                                 <i class="fas fa-download mr-2"></i> Download APK (GitHub Release)
                             </a>
                         </div>
