--- a/projects.html
+++ b/projects.html
@@ -213,7 +213,7 @@
                                <div class="icon-container mb-4"> <i class="fas fa-list-check text-4xl text-secondary"></i> </div>
                               <h3 class="text-xl font-semibold text-primary mb-2">To-Do List</h3>
                               <p class="text-gray-300 text-sm mb-4">A feature-rich task management application with persistence and editing.</p>
-                              <a href="projects_sub/ToDoList.html" class="text-lighttext hover:text-primary hover:underline font-semibold inline-block transition duration-300">View Project <i class="fas fa-arrow-right text-sm ml-1"></i></a>
+                              <a href="projects_sub/todolist.html" class="text-lighttext hover:text-primary hover:underline font-semibold inline-block transition duration-300">View Project <i class="fas fa-arrow-right text-sm ml-1"></i></a>
                          </div>
                     </div>
 
