--- a/projects_sub/TypingSpeedTest.html
+++ b/projects_sub/TypingSpeedTest.html
@@ -82,7 +82,7 @@ background: linear-gradient(90deg, #ff416c, #ff4b2b); /* Example gradient */
             :class="{ 'bg-black/80 backdrop-blur-md shadow-lg': window.scrollY > 50, 'bg-transparent': window.scrollY <= 50 }"
             @scroll.window="window.scrollY > 50 ? true : false">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center max-w-7xl">
-            <a href="index.html" class="text-2xl font-bold text-primary hover:text-secondary transition duration-300">K.S.D</a>
+            <a href="../index.html" class="text-2xl font-bold text-primary hover:text-secondary transition duration-300">K.S.D</a>
 
             <ul class="hidden md:flex space-x-8 items-center">
                 <li><a href="../index.html" class="hover:text-primary transition duration-300 font-medium">Home</a></li>
