--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 <!-- Profile Image with Floating Icons -->
                 <div class="md:w-2/5 flex justify-center" data-aos="fade-left" data-aos-delay="200">
                     <div class="relative">
-                        <img src="Profile.jpg" alt="Kalana Sahan Dillimuni" class="w-64 h-64 md:w-80 md:h-80 lg:w-[350px] lg:h-[500px] rounded-full object-cover object-top border-4 border-primary/50 shadow-2xl floating-img">
+                        <img src="profile.jpg" alt="Kalana Sahan Dillimuni" class="w-64 h-64 md:w-80 md:h-80 lg:w-[350px] lg:h-[500px] rounded-full object-cover object-top border-4 border-primary/50 shadow-2xl floating-img">
                         <!-- Floating Icons -->
                         <div class="absolute -bottom-4 -right-4 w-20 h-20 bg-secondary rounded-full flex items-center justify-center text-white text-3xl shadow-lg floating-img animation-delay-1000">
                              <i class="fas fa-code"></i>
@@ -304,7 +304,7 @@
                      <!-- Social Media Links in Contact Section (Reverted to 3 links) -->
                      <a href="https://web.facebook.com/kalana.sahan.79" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-primary transition duration-300 text-3xl"><i class="fab fa-facebook"></i></a>
                      <a href="https://www.instagram.com/kalana._.sahan/" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-primary transition duration-300 text-3xl"><i class="fab fa-instagram"></i></a>
-                     <a href="https://www.linkedin.com/in/kalana-sahan" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-primary transition duration-300 text-3xl"><i class="fab fa-linkedin"></i></a>
+                     <a href="https://www.linkedin.com/in/" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-primary transition duration-300 text-3xl"><i class="fab fa-linkedin"></i></a>
                     </div>
                 </div>
             </div>
@@ -319,11 +319,13 @@
                     <!-- Social Media Links in Footer (Reverted to 3 links for consistency) -->
                      <a href="https://web.facebook.com/kalana.sahan.79" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-primary transition duration-300 text-2xl"><i class="fab fa-facebook"></i></a>
                      <a href="https://www.instagram.com/kalana._.sahan/" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-primary transition duration-300 text-2xl"><i class="fab fa-instagram"></i></a>
-                     <a href="https://www.linkedin.com/in/kalana-sahan" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-primary transition duration-300 text-2xl"><i class="fab fa-linkedin"></i></a>
+                     <a href="https://www.linkedin.com/in/" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-primary transition duration-300 text-2xl"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://www.youtube.com/@Part_of_kaali_life" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-primary transition duration-300 text-2xl"><i class="fab fa-youtube"></i></a>
+                    <a href="https://www.tiktok.com/@part_of_kaali_life" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-primary transition duration-300 text-2xl"><i class="fab fa-tiktok"></i></a>    
                 </div>
             </div>
             <!-- Corrected copyright name -->
-            <p>&copy; <span id="currentYear"></span> Kalana Sahan Dillimuni. All Rights Reserved.</p>
+            <p>&copy; <span id="currentYear"></span> K.S.D All Rights Reserved.</p>
              <p class="text-sm mt-2">Designed with <i class="fas fa-heart text-primary"></i> using Tailwind CSS & Alpine.js</p>
         </div>
     </footer>
