--- a/projects.html
+++ b/projects.html
@@ -213,7 +213,7 @@
                                <div class="icon-container mb-4"> <i class="fas fa-list-check text-4xl text-secondary"></i> </div>
                               <h3 class="text-xl font-semibold text-primary mb-2">To-Do List</h3>
                               <p class="text-gray-300 text-sm mb-4">A feature-rich task management application with persistence and editing.</p>
-                              <a href="projects_sub/todolist.html" class="text-lighttext hover:text-primary hover:underline font-semibold inline-block transition duration-300">View Project <i class="fas fa-arrow-right text-sm ml-1"></i></a>
+                              <a href="projects_sub/ToDoList.html" class="text-lighttext hover:text-primary hover:underline font-semibold inline-block transition duration-300">View Project <i class="fas fa-arrow-right text-sm ml-1"></i></a>
                          </div>
                     </div>
 
@@ -250,12 +250,15 @@
                 <p class="text-gray-400 mb-4 text-lg">Follow Me</p>
                 <div class="flex justify-center items-center space-x-5 md:space-x-6">
                     <a href="https://web.facebook.com/kalana.sahan.79" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-primary transition duration-300 text-2xl"><i class="fab fa-facebook"></i></a>
-                    <a href="https://www.instagram.com/kalana._.sahan/" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-primary transition duration-300 text-2xl"><i class="fab fa-instagram"></i></a>
-                    <a href="https://www.linkedin.com/in/kalana-sahan" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-primary transition duration-300 text-2xl"><i class="fab fa-linkedin"></i></a>
+                     <a href="https://www.instagram.com/kalana._.sahan/" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-primary transition duration-300 text-2xl"><i class="fab fa-instagram"></i></a>
+                     <a href="https://www.linkedin.com/in/" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-primary transition duration-300 text-2xl"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://www.youtube.com/@Part_of_kaali_life" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-primary transition duration-300 text-2xl"><i class="fab fa-youtube"></i></a>
+                    <a href="https://www.tiktok.com/@part_of_kaali_life" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-primary transition duration-300 text-2xl"><i class="fab fa-tiktok"></i></a>    
                 </div>
             </div>
-            <p>&copy; <span id="currentYear"></span> Kalana Sahan Dillimuni. All Rights Reserved.</p>
-            <p class="text-sm mt-2">Designed with <i class="fas fa-heart text-primary"></i> using Tailwind CSS & Alpine.js</p>
+            <!-- Corrected copyright name -->
+            <p>&copy; <span id="currentYear"></span> K.S.D All Rights Reserved.</p>
+             <p class="text-sm mt-2">Designed with <i class="fas fa-heart text-primary"></i> using Tailwind CSS & Alpine.js</p>
         </div>
     </footer>
 
