--- a/index.html
+++ b/index.html
@@ -281,11 +281,11 @@
                      <form action="https://formspree.io/f/mwpopvdp" method="POST">
                           <div class="mb-6">
                               <label for="name" class="block text-gray-300 font-medium mb-2">Your Name</label>
-                              <input type="text" id="name" name="name" placeholder="John Doe" required class="w-full px-4 py-3 bg-gray-700 text-lighttext border border-gray-600 rounded-lg focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent placeholder-gray-500">
+                              <input type="text" id="name" name="name" placeholder="kalana sahan" required class="w-full px-4 py-3 bg-gray-700 text-lighttext border border-gray-600 rounded-lg focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent placeholder-gray-500">
                          </div>
                          <div class="mb-6">
                               <label for="email" class="block text-gray-300 font-medium mb-2">Your Email</label>
-                              <input type="email" id="email" name="email" placeholder="john.doe@example.com" required class="w-full px-4 py-3 bg-gray-700 text-lighttext border border-gray-600 rounded-lg focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent placeholder-gray-500">
+                              <input type="email" id="email" name="email" placeholder="kalana@example.com" required class="w-full px-4 py-3 bg-gray-700 text-lighttext border border-gray-600 rounded-lg focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent placeholder-gray-500">
                          </div>
                          <div class="mb-8">
                               <label for="message" class="block text-gray-300 font-medium mb-2">Your Message</label>
