--- a/projects_sub/apps_software/mycreations.html
+++ b/projects_sub/apps_software/mycreations.html
@@ -18,7 +18,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 
-    <!-- Alpine.js CDN -->
+    <!-- Alpine.js CDN - Added defer attribute -->
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
 
     <!-- Custom Styles and Tailwind Config -->
@@ -78,15 +78,15 @@
             :class="{ 'bg-black/80 backdrop-blur-md shadow-lg': window.scrollY > 50, 'bg-transparent': window.scrollY <= 50 }"
             @scroll.window="window.scrollY > 50 ? true : false">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center max-w-7xl">
-            <!-- Logo Link -->
+            <!-- Logo Link - Paths retained from user's provided code -->
             <a href="../../index.html" class="text-2xl font-bold text-primary hover:text-secondary transition duration-300">K.S.D</a>
 
-            <!-- Desktop Navigation -->
+            <!-- Desktop Navigation - Paths retained from user's provided code -->
             <ul class="hidden md:flex space-x-8 items-center">
                 <li><a href="../../index.html" class="hover:text-primary transition duration-300 font-medium">Home</a></li>
                 <li><a href="../../index.html#about" class="hover:text-primary transition duration-300 font-medium">About</a></li>
                 <li><a href="../../index.html#skills" class="hover:text-primary transition duration-300 font-medium">Skills</a></li>
-                <!-- Projects link styled as a button -->
+                <!-- Projects link styled as a button - Paths retained from user's provided code -->
                 <li><a href="../../projects.html" class="text-white bg-gradient-to-r from-primary to-secondary py-2 px-5 rounded-full hover:opacity-90 transition duration-300 font-semibold">Projects</a></li>
                 <li><a href="../../index.html#contact" class="hover:text-primary transition duration-300 font-medium">Contact</a></li>
             </ul>
@@ -98,7 +98,7 @@
         </nav>
     </header>
 
-    <!-- Mobile Menu -->
+    <!-- Mobile Menu - Paths retained from user's provided code -->
     <div x-show="mobileMenuOpen"
          x-transition:enter="transition ease-out duration-300"
          x-transition:enter-start="opacity-0 transform -translate-y-full"
@@ -149,12 +149,25 @@
                             <h4 class="text-xl font-semibold text-white mb-2">MyFinanceApp</h4>
                             <p class="text-gray-300 text-sm mb-4">A comprehensive mobile app for managing personal finances, tracking expenses, and budgeting.</p>
                             <!-- Link to MyFinanceApp detail page. It's in the same directory. -->
-                            <a href="my-finance-app.html" target="_blank" class="inline-block bg-green-600 hover:bg-green-700 text-white font-semibold py-2 px-4 rounded-full shadow-md transition duration-300 text-sm">
+                            <a href="my-finance-app.html"  class="inline-block bg-green-600 hover:bg-green-700 text-white font-semibold py-2 px-4 rounded-full shadow-md transition duration-300 text-sm">
                                 <i class="fas fa-download mr-2"></i> Download App
                             </a>
                         </div>
                     </div>
 
+                    <!-- Mobile App 2 Card (KSD Protector) - NEW CARD ADDED HERE -->
+                    <div class="bg-cardbg rounded-lg shadow-xl overflow-hidden transform transition duration-300 hover:scale-105 border-t-4 border-primary" data-aos="fade-up" data-aos-delay="350">
+                        <img src="app2/icon.png" alt="KSD Protector App Image" class="app-img-placeholder">
+                        <div class="p-6">
+                            <h4 class="text-xl font-semibold text-white mb-2">KSD Protector: Secure Password Manager</h4>
+                            <p class="text-gray-300 text-sm mb-4">A secure, offline-first mobile application for generating, analyzing, and storing your passwords.</p>
+                            <!-- Link to KSD Protector detail page. It's in the same directory. -->
+                            <a href="ksd-protector-app.html" class="inline-block bg-green-600 hover:bg-green-700 text-white font-semibold py-2 px-4 rounded-full shadow-md transition duration-300 text-sm">
+                                <i class="fas fa-download mr-2"></i> Download App
+                            </a>
+                        </div>
+                    </div>
+                    
                     <!-- Add more Mobile App Cards here if needed -->
 
                 </div>
@@ -209,24 +222,23 @@
         </section>
     </main>
 
-    <!-- Footer -->
+    <!-- Footer - Paths and content retained from user's provided code -->
     <footer class="bg-black text-gray-500 py-8 mt-12">
         <div class="container mx-auto px-6 text-center">
             <div class="mb-6">
                 <p class="text-gray-400 mb-4 text-lg">Follow Me</p>
                 <div class="flex justify-center items-center space-x-5 md:space-x-6">
-                   <!-- Social Media Links in Footer (Reverted to 3 links for consistency) -->
-                     <a href="https://web.facebook.com/kalana.sahan.79" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-primary transition duration-300 text-2xl"><i class="fab fa-facebook"></i></a>
-                     <a href="https://www.instagram.com/kalana._.sahan/" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-primary transition duration-300 text-2xl"><i class="fab fa-instagram"></i></a>
-                     <a href="https://www.linkedin.com/in/" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-primary transition duration-300 text-2xl"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://web.facebook.com/kalana.sahan.79" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-primary transition duration-300 text-2xl"><i class="fab fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/kalana._.sahan/" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-primary transition duration-300 text-2xl"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.linkedin.com/in/" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-primary transition duration-300 text-2xl"><i class="fab fa-linkedin"></i></a>
                     <a href="https://www.youtube.com/@Part_of_kaali_life" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-primary transition duration-300 text-2xl"><i class="fab fa-youtube"></i></a>
-                    <a href="https://www.tiktok.com/@part_of_kaali_life" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-primary transition duration-300 text-2xl"><i class="fab fa-tiktok"></i></a>    
+                    <a href="https://www.tiktok.com/@part_of_kaali_life" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-primary transition duration-300 text-2xl"><i class="fab fa-tiktok"></i></a>    
                     <a href="https://github.com/kaali-k" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-primary transition duration-300 text-2xl"><i class="fab fa-github"></i></a>
                 </div>
             </div>
-            <!-- Corrected copyright name -->
+            <!-- Copyright name retained from user's provided code -->
             <p>&copy; <span id="currentYear"></span> K.S.D All Rights Reserved.</p>
-             <p class="text-sm mt-2">Designed with <i class="fas fa-heart text-primary"></i> using Tailwind CSS & Alpine.js</p>
+            <p class="text-sm mt-2">Designed with <i class="fas fa-heart text-primary"></i> using Tailwind CSS & Alpine.js</p>
         </div>
     </footer>
 
