--- a/projects_sub/apps_software/mycreations.html
+++ b/projects_sub/apps_software/mycreations.html
@@ -76,16 +76,16 @@
     <!-- Header -->
     <header class="fixed w-full top-0 z-50 transition-all duration-300 bg-transparent">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center max-w-7xl">
-            <!-- Logo Link - Paths retained from user's provided code -->
+            <!-- Logo Link -->
             <a href="../../index.html" class="text-2xl font-bold text-primary hover:text-secondary transition duration-300">K.S.D</a>
 
-            <!-- Desktop Navigation - Paths retained from user's provided code -->
+            <!-- Desktop Navigation -->
             <ul class="hidden md:flex space-x-8 items-center">
                 <li><a href="../../index.html" class="hover:text-primary transition duration-300 font-medium">Home</a></li>
                 <li><a href="../../index.html#about" class="hover:text-primary transition duration-300 font-medium">About</a></li>
                 <li><a href="../../index.html#skills" class="hover:text-primary transition duration-300 font-medium">Skills</a></li>
-                <!-- Projects link styled as a button - Paths retained from user's provided code -->
-                <li><a href="../../projects.html" class="text-white bg-gradient-to-r from-primary to-secondary py-2 px-5 rounded-full hover:opacity-90 transition duration-300 font-semibold">Projects</a></li>
+                <!-- Projects link styled as a button -->
+                <li><a href="../projects.html" class="text-white bg-gradient-to-r from-primary to-secondary py-2 px-5 rounded-full hover:opacity-90 transition duration-300 font-semibold">Projects</a></li>
                 <li><a href="../../index.html#contact" class="hover:text-primary transition duration-300 font-medium">Contact</a></li>
             </ul>
 
@@ -96,7 +96,7 @@
         </nav>
     </header>
 
-    <!-- Mobile Menu - Paths retained from user's provided code -->
+    <!-- Mobile Menu -->
     <div x-show="mobileMenuOpen"
          x-transition:enter="transition ease-out duration-300"
          x-transition:enter-start="opacity-0 transform -translate-y-full"
@@ -109,7 +109,7 @@
             <a href="../../index.html" @click="mobileMenuOpen = false" class="text-2xl hover:text-primary transition duration-300">Home</a>
             <a href="../../index.html#about" @click="mobileMenuOpen = false" class="text-2xl hover:text-primary transition duration-300">About</a>
             <a href="../../index.html#skills" @click="mobileMenuOpen = false" class="text-2xl hover:text-primary transition duration-300">Skills</a>
-            <a href="../../projects.html" @click="mobileMenuOpen = false" class="text-2xl text-white bg-gradient-to-r from-primary to-secondary py-2 px-5 rounded-full hover:opacity-90 transition duration-300 font-semibold">Projects</a>
+            <a href="../projects.html" @click="mobileMenuOpen = false" class="text-2xl text-white bg-gradient-to-r from-primary to-secondary py-2 px-5 rounded-full hover:opacity-90 transition duration-300 font-semibold">Projects</a>
             <a href="../../index.html#contact" @click="mobileMenuOpen = false" class="text-2xl hover:text-primary transition duration-300">Contact</a>
     </div>
 
@@ -197,7 +197,7 @@
                             <h4 class="text-xl font-semibold text-white mb-2">Point of Sale (POS) Desktop Application</h4>
                             <p class="text-gray-300 text-sm mb-4">A comprehensive POS desktop application for streamlining business operations, inventory, and analytics. Built with Electron.js, HTML, CSS (Tailwind), JavaScript, SQLite3, Chart.js, and Node.js.</p>
                             <a href="desktop-software1.html" class="inline-block bg-purple-600 hover:bg-purple-700 text-white font-semibold py-2 px-4 rounded-full shadow-md transition duration-300 text-sm">
-                                <i class="fas fa-globe mr-2"></i> View Project
+                                <i class="fas fa-info-circle mr-2"></i> Learn More
                             </a>
                         </div>
                     </div>
@@ -223,6 +223,19 @@
                             <p class="text-gray-300 text-sm mb-4">Streamlining Sales, Billing, and Operational Insights for Small to Medium Businesses in a Local Environment.</p>
                             <a href="local-web-app-2.html" class="inline-block bg-purple-600 hover:bg-purple-700 text-white font-semibold py-2 px-4 rounded-full shadow-md transition duration-300 text-sm">
                                 <i class="fas fa-globe mr-2"></i> View Project
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- K.S.D Pasteboard Card - Updated to Download Software -->
+                    <div class="bg-cardbg rounded-lg shadow-xl overflow-hidden transform transition duration-300 hover:scale-105 border-t-4 border-primary" data-aos="fade-up" data-aos-delay="450">
+                        <img src="software4/icon.png" alt="K.S.D Pasteboard Icon" class="app-img-placeholder object-contain p-4">
+                        <div class="p-6">
+                            <h4 class="text-xl font-semibold text-white mb-2">K.S.D Pasteboard</h4>
+                            <p class="text-gray-300 text-sm mb-4">An advanced clipboard manager for desktop, enhancing workflow with history and search.</p>
+                            <!-- Changed to Download Software button -->
+                            <a href="ksd-pasteboard.html" class="inline-block bg-green-600 hover:bg-green-700 text-white font-semibold py-2 px-4 rounded-full shadow-md transition duration-300 text-sm">
+                                <i class="fas fa-download mr-2"></i> Download Software
                             </a>
                         </div>
                     </div>
