--- a/projects_sub/apps_software/mycreations.html
+++ b/projects_sub/apps_software/mycreations.html
@@ -98,14 +98,14 @@
 
     <!-- Mobile Menu -->
     <div x-show="mobileMenuOpen"
-         x-transition:enter="transition ease-out duration-300"
-         x-transition:enter-start="opacity-0 transform -translate-y-full"
-         x-transition:enter-end="opacity-100 transform translate-y-0"
-         x-transition:leave="transition ease-in duration-200"
-         x-transition:leave-start="opacity-100 transform translate-y-0"
-         x-transition:leave-end="opacity-0 transform -translate-y-full"
-         class="fixed inset-0 bg-black/95 z-40 flex flex-col items-center justify-center space-y-6 md:hidden"
-         @click.away="mobileMenuOpen = false">
+          x-transition:enter="transition ease-out duration-300"
+          x-transition:enter-start="opacity-0 transform -translate-y-full"
+          x-transition:enter-end="opacity-100 transform translate-y-0"
+          x-transition:leave="transition ease-in duration-200"
+          x-transition:leave-start="opacity-100 transform translate-y-0"
+          x-transition:leave-end="opacity-0 transform -translate-y-full"
+          class="fixed inset-0 bg-black/95 z-40 flex flex-col items-center justify-center space-y-6 md:hidden"
+          @click.away="mobileMenuOpen = false">
             <a href="../../index.html" @click="mobileMenuOpen = false" class="text-2xl hover:text-primary transition duration-300">Home</a>
             <a href="../../index.html#about" @click="mobileMenuOpen = false" class="text-2xl hover:text-primary transition duration-300">About</a>
             <a href="../../index.html#skills" @click="mobileMenuOpen = false" class="text-2xl hover:text-primary transition duration-300">Skills</a>
@@ -161,7 +161,7 @@
                             <p class="text-gray-300 text-sm mb-4">A secure, offline-first mobile application for generating, analyzing, and storing your passwords.</p>
                             <!-- Link to KSD Protector detail page. It's in the same directory. -->
                             <a href="ksd-protector-app.html"class="inline-block bg-green-600 hover:bg-green-700 text-white font-semibold py-2 px-4 rounded-full shadow-md transition duration-300 text-sm">
-                                   <i class="fas fa-download mr-2"></i> Download App
+                                <i class="fas fa-download mr-2"></i> Download App
                             </a>
                         </div>
                     </div>
@@ -174,13 +174,23 @@
                             <p class="text-gray-300 text-sm mb-4">An intuitive mobile app for bidirectional Morse code translation and comprehensive reference.</p>
                             <!-- Link to K.S.D Morse Code Translator detail page. It's in the same directory. -->
                             <a href="ksd-morse-app.html" class="inline-block bg-green-600 hover:bg-green-700 text-white font-semibold py-2 px-4 rounded-full shadow-md transition duration-300 text-sm">
-                                   <i class="fas fa-download mr-2"></i> Download App
+                                <i class="fas fa-download mr-2"></i> Download App
                             </a>
                         </div>
                     </div>
                     
-                    <!-- Add more Mobile App Cards here if needed -->
-
+                    <!-- K.S.D Note App Card -->
+                    <div class="bg-cardbg rounded-lg shadow-xl overflow-hidden transform transition duration-300 hover:scale-105 border-t-4 border-primary" data-aos="fade-up" data-aos-delay="450">
+                        <img src="app4/icon.png" alt="K.S.D Note App Screenshot" class="app-img-placeholder object-contain p-4">
+                        <div class="p-6">
+                            <h4 class="text-xl font-semibold text-white mb-2">K.S.D Note App</h4>
+                            <p class="text-gray-300 text-sm mb-4">A secure, modern note-taking application built with Flutter, focusing on privacy and local database storage.</p>
+                            <a href="ksd-note-app.html"  class="inline-block bg-green-600 hover:bg-green-700 text-white font-semibold py-2 px-4 rounded-full shadow-md transition duration-300 text-sm">
+                                <i class="fas fa-download mr-2"></i> Download App
+                            </a>
+                        </div>
+                    </div>
+                    
                 </div>
             </div>
 
@@ -239,7 +249,6 @@
                             </a>
                         </div>
                     </div>
-
                 </div>
             </div>
 
@@ -256,7 +265,7 @@
                     <a href="https://www.instagram.com/kalana._.sahan/" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-primary transition duration-300 text-2xl"><i class="fab fa-instagram"></i></a>
                     <a href="https://www.linkedin.com/in/" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-primary transition duration-300 text-2xl"><i class="fab fa-linkedin"></i></a>
                     <a href="https://www.youtube.com/@Part_of_kaali_life" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-primary transition duration-300 text-2xl"><i class="fab fa-youtube"></i></a>
-                    <a href="https://www.tiktok.com/@part_of_kaali_life" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-primary transition duration-300 text-2xl"><i class="fab fa-tiktok"></i></a>    
+                    <a href="https://www.tiktok.com/@part_of_kaali_life" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-primary transition duration-300 text-2xl"><i class="fab fa-tiktok"></i></a>    
                     <a href="https://github.com/kaali-k" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-primary transition duration-300 text-2xl"><i class="fab fa-github"></i></a>
                 </div>
             </div>
