--- a/projects_sub/apps_software/ksd-note-app.html
+++ b/projects_sub/apps_software/ksd-note-app.html
@@ -189,7 +189,7 @@
                     <!-- Updated screenshot images -->
                     <img @click="isModalOpen = true; currentImageSrc = 'app4/main.webp'; currentImageAlt = 'Note List Screen'" src="app4/main.webp" alt="Note List Screen" class="app-screenshot flex-shrink-0 w-64 md:w-72 lg:w-80">
                     <img @click="isModalOpen = true; currentImageSrc = 'app4/note.webp'; currentImageAlt = 'Note Editor Screen'" src="app4/note.webp" alt="Note Editor Screen" class="app-screenshot flex-shrink-0 w-64 md:w-72 lg:w-80">
-                    <img @click="isModalOpen = true; currentImageSrc = 'app4/Menu.webp'; currentImageAlt = 'Menu Screen'" src="app4/Menu.webp" alt="Menu Screen" class="app-screenshot flex-shrink-0 w-64 md:w-72 lg:w-80">
+                    <img @click="isModalOpen = true; currentImageSrc = 'app4/menu.webp'; currentImageAlt = 'Menu Screen'" src="app4/menu.webp" alt="Menu Screen" class="app-screenshot flex-shrink-0 w-64 md:w-72 lg:w-80">
                     <img @click="isModalOpen = true; currentImageSrc = 'app4/setting.webp'; currentImageAlt = 'Settings Screen'" src="app4/setting.webp" alt="Settings Screen" class="app-screenshot flex-shrink-0 w-64 md:w-72 lg:w-80">
                 </div>
 
@@ -294,3 +294,4 @@
     </script>
 </body>
 </html>
+
